#198 add Favorite UI to jsp